# BSDMC

./: BUILD.md  CMakeLists.txt  COPYING.md  README.md  changelog.md
api/gui/: CMakeLists.txt  DesktopServices.cpp
api/logic/: BaseInstance.cpp  CMakeLists.txt  InstanceList.cpp
api/logic/java/launch/: CheckJava.cpp
api/logic/launch/: LaunchTask.cpp
api/logic/minecraft/: MinecraftInstance.cpp  MojangVersionFormat.cpp
api/logic/minecraft/auth/: YggdrasilTask.cpp
api/logic/minecraft/launch/: ExtractNatives.cpp
api/logic/net/: Download.cpp  PasteUpload.cpp
api/logic/notifications/: NotificationChecker.cpp
api/logic/screenshots/: ImgurAlbumCreation.cpp  ImgurUpload.cpp
api/logic/tasks/: Task.cpp
api/logic/tools/: MCEditTool.cpp
api/logic/updater/: DownloadTask.cpp  UpdateChecker.cpp
application/: CMakeLists.txt  LaunchController.cpp  MainWindow.cpp  MultiMC.cpp  UpdateController.cpp
application/dialogs/: AboutDialog.cpp  AboutDialog.ui  UpdateDialog.cpp
application/package/linux/: BSDMC  bsdmc.desktop
application/pages/global/: MultiMCPage.h  MultiMCPage.ui  ProxyPage.ui
application/pages/instance/: LegacyUpgradePage.ui  VersionPage.cpp
application/resources/: multimc.rc
application/setupwizard/: AnalyticsWizardPage.cpp  LanguageWizardPage.cpp  SetupWizard.cpp
application/widgets/: CustomCommands.ui  JavaSettingsWidget.cpp  PageContainer.cpp
libraries/classparser/: CMakeLists.txt
libraries/iconfix/: CMakeLists.txt
libraries/rainbow/: CMakeLists.txt
libraries/systeminfo/src/: sys_unix.cpp
